test/valid/56311_shadow_variables/shadow_variables.agu
-- Author: tcomp56311, João Vedor

let main(_) : Unit -> Unit =
    let x : Int = 2;  -- Shadow parameter
    let x : Int = 4;  -- Shadow again
    print(x)