test/invalid-syntax/56311_missing_character/missing_character.agu
-- Author: tcomp56311, João Vedor

-- Syntax Problem

let x Int = 42

-- Error: Missing ':' in variable declaration